# robocup23

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autostart.sh  calibrate.sh  doc.md  ich_packe_meinen_koffer_und_nehme_mit.txt  recompile.sh  rerun.sh  robocup.desktop  run.sh  stop.py
files/3D/: Camera_Holder.stl  Camera_Mount.stl  Camera_Servo_Mount.stl  Front_Mount.stl  Greifer_A.stl  Greifer_Basis.stl
files/3d/: Greifer_Arm.stl
files/PCB/: Main_PCB_EasyEDA_Project.json
ml_notebooks/: silver.ipynb  victims.ipynb
runtime_data/: silver.tflite  stop.py
src/: corner_ml.cpp  corner_ml.h  datei der verzweifelung.txt  defines.h  line.cpp  line.h  line_old.cpp  main.cpp  rescue.cpp  rescue.h  robot.cpp  robot.h  silver_ml.cpp  silver_ml.h  utils.cpp  utils.h  victim_ml.cpp  victim_ml.h
src/nano_firmware/: defines.h  functions.ino  nano_firmware.ino  nano_firmware.ino3420496034628491617.tmp  nano_firmware_AVR_NANO_atmega328p.hex
src/teensy_firmware/: defines.h  functions.ino  teensy_firmware.ino  utils.h
tests/: capture_from_camera.cpp  linefollower_test.py  ml stuff.py  serial_test.py  zone_position.py
tests/capture_from_camera/: CMakeLists.txt  capture_from_camera.cpp  run.sh
tests/find_center/: find_center.py
tests/linefollower_test_teensy/: linefollower_test_teensy.ino
tests/spi/: pi_spi_test.cpp  teensy_spi_test.ino
tests/spi/spi_test/: spi_test.ino  testfile.py
tests/spi/teensy_spi_test/: teensy_spi_test.ino
tests/spi_full/: pi_spi_test_full.cpp  protocol.cpp  protocol.h
tests/vl43l0xtest/: vl43l0xtest.ino
